removed Tr's for engine class

--- a/index.html
+++ b/index.html
@@ -324,13 +324,16 @@
                     <div class="our-class-schedule-tab-area">
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" id="all-tab" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="true">Strength Class</a>
+                                <a class="nav-link active" id="strength-tab" data-toggle="tab" href="#strength" role="tab" aria-controls="strength" aria-selected="true">Strength Class</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="false">engine Class</a>
+                            </li> -->
+                            <li class="nav-item">
+                                <a class="nav-link" id="engine-tab" data-toggle="tab" href="#engine" role="tab" aria-controls="engine" aria-selected="false">Engine Class</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">sweat class</a>
+                                <a class="nav-link" id="sweat-tab" data-toggle="tab" href="#sweat" role="tab" aria-controls="sweat" aria-selected="false">Sweat Class</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contacttab" role="tab" aria-controls="contact" aria-selected="false">BootCamp</a>
@@ -343,7 +346,7 @@
                             </li> -->
                         </ul>
                         <div class="tab-content" id="myTabContent">
-                            <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="all-tab">
+                            <div class="tab-pane fade show active" id="strength" role="tabpanel" aria-labelledby="strength-tab">
 
                                 <div class="our-class-schedule-table table-responsive">
                                     <table class="table">
@@ -360,6 +363,7 @@
                                         </thead>
                                         <tbody>
                                             <tr>
+                                                <!-- strength -->
                                                 <!-- monday 1 -->
                                                 <td> 
                                                     <span class="span1">05.00 am - 6.00 am</span>
@@ -583,10 +587,10 @@
                                         </tbody>
                                     </table>
                                 </div>
-
+                                
                             </div>
-                            <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
-
+                            <!-- engine -->
+                            <div class="tab-pane fade" id="engine" role="tabpanel" aria-labelledby="engine-tab">
                                 <div class="our-class-schedule-table table-responsive">
                                     <table class="table">
                                         <thead>
@@ -603,7 +607,86 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <span class="span1">05.20 pm - 11.00 am</span>
+                                                    <span class="span1">05.20 pm - 6.20 pm</span>
+                                                    <span class="span2">Engine Class</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+                                                <td class="blank">
+                                                    <span class="span1">05.20 pm - 6.20 pm</span>
+                                                    <span class="span2">Engine Class</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+                                                <td>
+                                                    <span class="span1">05.20 pm - 6.20 pm</span>
+                                                    <span class="span2">Engine Class</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+                                                <td class="blank">
+                                                    <span class="span1">05.20 pm - 6.20 pm</span>
+                                                    <span class="span2">Engine Class</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+                                                <td>
+                                                    <span class="span1">05.20 pm - 6.20 pm</span>
+                                                    <span class="span2">Engine Class</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+
+                                                <td class="blank">
+                                                    <span class="span1"></span>
+                                                    <span class="span2"></span>
+                                                    <span class="span3"></span>
+                                                </td>
+                                                <td>
+                                                    <span class="span1"></span>
+                                                    <span class="span2"></span>
+                                                    <span class="span3"></span>
+                                                </td>
+                                            </tr>
+                                            <!-- <tr>
+                                                <td class="blank">
+                                                    <span class="span1"></span>
+                                                    <span class="span2"></span>
+                                                    <span class="span3"></span>
+                                                </td>
+                                                <td>
+                                                    <span class="span1">09.00 am - 11.00 am</span>
+                                                    <span class="span2">Weight Loss</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+                                                <td class="blank">
+                                                    <span class="span1"></span>
+                                                    <span class="span2"></span>
+                                                    <span class="span3"></span>
+                                                </td>
+
+                                                <td>
+                                                    <span class="span1">09.00 am - 11.00 am</span>
+                                                    <span class="span2">Weight Loss</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+
+                                                <td class="blank">
+                                                    <span class="span1"></span>
+                                                    <span class="span2"></span>
+                                                    <span class="span3"></span>
+                                                </td>
+
+                                                <td>
+                                                    <span class="span1">09.00 am - 11.00 am</span>
+                                                    <span class="span2">Weight Loss</span>
+                                                    <span class="span3">M. Parker</span>
+                                                </td>
+
+                                                <td class="blank">
+                                                    <span class="span1"></span>
+                                                    <span class="span2"></span>
+                                                    <span class="span3"></span>
+                                                </td>
+                                            </tr> -->
+                                            <!-- <tr>
+                                                <td>
+                                                    <span class="span1">09.00 am - 11.00 am</span>
                                                     <span class="span2">Weight Loss</span>
                                                     <span class="span3">M. Parker</span>
                                                 </td>
@@ -613,7 +696,7 @@
                                                     <span class="span3"></span>
                                                 </td>
                                                 <td>
-                                                    <span class="span1">11.00 am - 11.00 am</span>
+                                                    <span class="span1">09.00 am - 11.00 am</span>
                                                     <span class="span2">Weight Loss</span>
                                                     <span class="span3">M. Parker</span>
                                                 </td>
@@ -679,8 +762,8 @@
                                                     <span class="span2"></span>
                                                     <span class="span3"></span>
                                                 </td>
-                                            </tr>
-                                            <tr>
+                                            </tr> -->
+                                            <!-- <tr>
                                                 <td>
                                                     <span class="span1">09.00 am - 11.00 am</span>
                                                     <span class="span2">Weight Loss</span>
@@ -717,93 +800,15 @@
                                                     <span class="span2">Weight Loss</span>
                                                     <span class="span3">M. Parker</span>
                                                 </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="blank">
-                                                    <span class="span1"></span>
-                                                    <span class="span2"></span>
-                                                    <span class="span3"></span>
-                                                </td>
-                                                <td>
-                                                    <span class="span1">09.00 am - 11.00 am</span>
-                                                    <span class="span2">Weight Loss</span>
-                                                    <span class="span3">M. Parker</span>
-                                                </td>
-                                                <td class="blank">
-                                                    <span class="span1"></span>
-                                                    <span class="span2"></span>
-                                                    <span class="span3"></span>
-                                                </td>
-
-                                                <td>
-                                                    <span class="span1">09.00 am - 11.00 am</span>
-                                                    <span class="span2">Weight Loss</span>
-                                                    <span class="span3">M. Parker</span>
-                                                </td>
-
-                                                <td class="blank">
-                                                    <span class="span1"></span>
-                                                    <span class="span2"></span>
-                                                    <span class="span3"></span>
-                                                </td>
-
-                                                <td>
-                                                    <span class="span1">09.00 am - 11.00 am</span>
-                                                    <span class="span2">Weight Loss</span>
-                                                    <span class="span3">M. Parker</span>
-                                                </td>
-
-                                                <td class="blank">
-                                                    <span class="span1"></span>
-                                                    <span class="span2"></span>
-                                                    <span class="span3"></span>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    <span class="span1">09.00 am - 11.00 am</span>
-                                                    <span class="span2">Weight Loss</span>
-                                                    <span class="span3">M. Parker</span>
-                                                </td>
-                                                <td class="blank">
-                                                    <span class="span1"></span>
-                                                    <span class="span2"></span>
-                                                    <span class="span3"></span>
-                                                </td>
-                                                <td>
-                                                    <span class="span1">09.00 am - 11.00 am</span>
-                                                    <span class="span2">Weight Loss</span>
-                                                    <span class="span3">M. Parker</span>
-                                                </td>
-                                                <td class="blank">
-                                                    <span class="span1"></span>
-                                                    <span class="span2"></span>
-                                                    <span class="span3"></span>
-                                                </td>
-                                                <td>
-                                                    <span class="span1">09.00 am - 11.00 am</span>
-                                                    <span class="span2">Weight Loss</span>
-                                                    <span class="span3">M. Parker</span>
-                                                </td>
-
-                                                <td class="blank">
-                                                    <span class="span1"></span>
-                                                    <span class="span2"></span>
-                                                    <span class="span3"></span>
-                                                </td>
-                                                <td>
-                                                    <span class="span1">09.00 am - 11.00 am</span>
-                                                    <span class="span2">Weight Loss</span>
-                                                    <span class="span3">M. Parker</span>
-                                                </td>
-                                            </tr>
+                                            </tr> -->
 
                                         </tbody>
                                     </table>
                                 </div>
 
                             </div>
-                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <!-- sweat tab -->
+                            <div class="tab-pane fade" id="sweat" role="tabpanel" aria-labelledby="sweat-tab">
 
                                 <div class="our-class-schedule-table table-responsive">
                                     <table class="table">
