--- a/about-us.html
+++ b/about-us.html
@@ -92,11 +92,10 @@
                         </div>
 
                         <div class="about-inner-content">
-                            <p class="mb-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada tristique ligula eu efficitur. Vivamus lorem dolor, mollis nec maximus in, rutrum vel tellus. Donec eu odio et diam elementum porttitor. Suspendisse
-                                tincidunt tincidunt porttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum quam.</p>
+                            <p class="mb-30">Smallville Athletics is located in fort Scott Kansas. Our team is dedicated towards our mission of building a well balanced, healthy and fully capable community! Move Well. Build Strength.</p>
                             <p class="mb-40">Vivamus lorem dolor, mollis nec maximus in, rutrum vel tellus. Donec eu odio et diam elementum porttitor. Suspendisse tincidunt tincidunt p orttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum quam.</p>
                             <div class="site-btn about-btn">
-                                <a href="#" class="primary-btn btn filled-btn text-uppercase">contact with us</a>
+                                <a href="#" class="primary-btn btn filled-btn text-uppercase">contact us</a>
                             </div>
                         </div>
 
@@ -117,7 +116,7 @@
                 <div class="col-lg-12  text-center mb-60">
                     <div class="section-title">
                         <h4 class="text-uppercase mb-40">- our features -</h4>
-                        <h1 class="text-uppercase">Our featured services</h1>
+                        <h1 class="text-uppercase">Our featured classes</h1>
                     </div>
                 </div>
             </div>
@@ -132,8 +131,8 @@
                             </div>
                             <div class="feature-list-ovelay-content">
                                 <div class="feature-list-ovelay-inner-content">
-                                    <h3 class="text-uppercase mb-20">Open training</h3>
-                                    <p>Suspendisse tincidunt tincidunt porttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum.</p>
+                                    <h3 class="text-uppercase mb-20">Strength training</h3>
+                                    <p>60 minute class designed to challenge your strength, speed, and overall fitness.</p>
                                     <div class="feature-overlay-btn">
                                         <div class="site-btn featured-overlay-btn">
                                             <a href="#" class="primary-btn btn filled-btn text-uppercase">Learn More</a>
@@ -149,13 +148,13 @@
                         <div class="single-feared-imted-wrapper position-relative">
                             <div class="featured-list-title">
                                 <div class="featured-list-title-content text-center">
-                                    <h3 class="text-uppercase">Cardio</h3>
+                                    <h3 class="text-uppercase">Engine</h3>
                                 </div>
                             </div>
                             <div class="feature-list-ovelay-content">
                                 <div class="feature-list-ovelay-inner-content">
-                                    <h3 class="text-uppercase mb-20">Open training</h3>
-                                    <p>Suspendisse tincidunt tincidunt porttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum.</p>
+                                    <h3 class="text-uppercase mb-20">Engine training</h3>
+                                    <p>Hybrid class designed to provide 45 minutes of barbell plus cardio, giving you the ultimate workout</p>
                                     <div class="feature-overlay-btn">
                                         <div class="site-btn featured-overlay-btn">
                                             <a href="#" class="primary-btn btn filled-btn text-uppercase">Learn More</a>
@@ -171,13 +170,13 @@
                         <div class="single-feared-imted-wrapper position-relative">
                             <div class="featured-list-title">
                                 <div class="featured-list-title-content text-center">
-                                    <h3 class="text-uppercase">Cardio Training</h3>
+                                    <h3 class="text-uppercase">Sweat</h3>
                                 </div>
                             </div>
                             <div class="feature-list-ovelay-content">
                                 <div class="feature-list-ovelay-inner-content">
-                                    <h3 class="text-uppercase mb-20">Open training</h3>
-                                    <p>Suspendisse tincidunt tincidunt porttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum.</p>
+                                    <h3 class="text-uppercase mb-20">Sweat training</h3>
+                                    <p>45 minute class with our focus on core and cardio. Great for ALL levels of fitness</p>
                                     <div class="feature-overlay-btn">
                                         <div class="site-btn featured-overlay-btn">
                                             <a href="#" class="primary-btn btn filled-btn text-uppercase">Learn More</a>
