--- a/index.html
+++ b/index.html
@@ -1927,9 +1927,12 @@
             </div>
         </div>
     </section> -->
+
     <!-- Blog area End -->
+
     <!-- banenr area start -->
-    <section class="banner-area position-relative pt-130 pb-130">
+
+    <!-- <section class="banner-area position-relative pt-130 pb-130">
         <div class="container">
             <div class="banner-outer-row position-relative pt-60 pb-60 pl-100 pr-100" data-background="https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80">
                 <div class="banner-outer-row-overlay"></div>
@@ -1950,7 +1953,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- banenr area end -->
 
     <!-- footer area start -->
@@ -1964,7 +1967,7 @@
                                 <a href="index.html"><img src="assets/img/footer-logo.png" alt=""></a>
                             </div>
                             <div class="footer-description">
-                                <p>Mohammad Ali Fitness Center is a professional fitness training center. Commercial publishing platforms and content management systems ensure that you can show different text, different data using.</p>
+                                <p>Smallville Athletics is a professional fitness training center. Commercial publishing platforms and content management systems ensure that you can show different text, different data using.</p>
                             </div>
                         </div>
                     </div>
