changed about section wording

--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
                         </div>
 
                         <div class="about-inner-content">
-                            <p class="mb-30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse malesuada tristique ligula eu efficitur. Vivamus lorem dolor, mollis nec maximus in, rutrum vel tellus. Donec eu odio et diam elementum porttitor. Suspendisse
-                                tincidunt tincidunt porttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum quam.</p>
-                            <p class="mb-40">Vivamus lorem dolor, mollis nec maximus in, rutrum vel tellus. Donec eu odio et diam elementum porttitor. Suspendisse tincidunt tincidunt p orttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum quam.</p>
+                            <p class="mb-30">At Smallville Athletics, located in Fort Scott Kansas for over 4 years, we are dedicated towards our mission of building a well balanced, healthy and fully capable community! </p>
+                            <p class="mb-40"><strong>Move Well. Build Strength.</strong></p>
                             <div class="site-btn about-btn">
                                 <a href="#" class="primary-btn btn filled-btn text-uppercase">contact us</a>
                             </div>
