--- a/index.html
+++ b/index.html
@@ -1477,12 +1477,12 @@
                     <div class="why-join-us-inner-content">
                         <div class="section-title mb-40">
                             <h4 class="text-uppercase mb-20">why join with us</h4>
-                            <h1 class="text-uppercase">WE ALWAYS PROVIDE BEST FITNESS SERVICE FOR 25 YEARS</h1>
+                            <h1 class="text-uppercase">THE BEST FITNESS SERVICE</h1>
                         </div>
                         <p>On the other hand, we denounce with righteous indignation the foult anuals dislike men who are so beguiled and demoralized by the nuhaiicharms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and
                             trouble that are bound toen sue; and equal blame belongs to those who fail in their duty.</p>
                         <div class="site-btn about-btn why-btn">
-                            <a href="#" class="primary-btn btn filled-btn text-uppercase">get appointment</a>
+                            <a href="#" class="primary-btn btn filled-btn text-uppercase">Learn More</a>
                         </div>
                     </div>
                 </div>
