strong on trainer sections

--- a/index.html
+++ b/index.html
@@ -1525,8 +1525,8 @@
                             <h4 class="text-uppercase mb-15">DAVID PK. WILLIAM</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
                             <ul>
-                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
-                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
                             </ul>
                         </div>
                     </div>
@@ -1546,8 +1546,8 @@
                             <h4 class="text-uppercase mb-15">Mark pk Parker</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
                             <ul>
-                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
-                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
                             </ul>
                         </div>
                     </div>
@@ -1567,8 +1567,8 @@
                             <h4 class="text-uppercase mb-15">steve m. jobs</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
                             <ul>
-                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
-                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
                             </ul>
                         </div>
                     </div>
@@ -1588,8 +1588,8 @@
                             <h4 class="text-uppercase mb-15">jonathan deo</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
                             <ul>
-                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
-                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
                             </ul>
                         </div>
                     </div>
