strong tag on trainers

--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@
                             <h4 class="text-uppercase mb-15">DAVID PK. WILLIAM</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
                             <ul>
-                                <li> <span class="text-uppercase"><strong>Classes: </strong></span> Strength Training</li>
+                                <li> <span class=""><strong>Classes: </strong></span> Strength Training</li>
                                 <li><strong>About: </strong> I've been training with lorem ipsum since the gladiators began</li>
                             </ul>
                         </div>
