added logo, removed padding from nav

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1519311965067-36d3e5f33d39?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
                             <div class="overlay-feature-inner-content">
-                                <p class="mb-30">45 Minute class with our focus on core and cardio. Great for ALL levels of fitness! </p>
+                                <p class="mb-30">45 Minute class with focus on core and cardio. Great for ALL levels of fitness! </p>
 
                                 <div class="site-btn feature-btn">
                                     <a href="#" class="primary-btn btn filled-btn">learn more</a>
